sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:9: error: type mismatch;
 found   : Unit
 required: Boolean
      if (i=x) {
           ^